Fixed revisions on mobile version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,11 +19,17 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
     background: #f5f6f7;
     color: #f5f6f7;
-    font-size: 20px;
     line-height: 36px;
+    font-size: 20px;
     text-align: center;
     font-weight: 300; }
 
+@media only screen and (max-device-width: 480px) {
+   body { 
+       font-size: 16px; 
+       line-height: 20px;
+   }
+}
 
 nav ul {
     list-style: none; }
@@ -110,6 +116,19 @@ a:active:hover {
     text-align: center;
 }
 
+.page-header{
+    font-family: 'Bebas Neue', sans-serif;
+    border-color: transparent;
+    //background: black;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding-top: 15px;
+}
+
+.page-header h1{
+    margin-top: 0px;
+}
+
 /* =========================
 
                 SECTION STYLES 
@@ -144,6 +163,9 @@ a:active:hover {
 #work {
     background: #009CFF; }
 
+#photo {
+    background: black; }
+
 #landing{
     background: url('../img/home.jpg') center center no-repeat;
     background-size: cover;
@@ -167,13 +189,20 @@ a:active:hover {
 
    =========================*/
 #landing .jumbotron{
+    position: relative;
     background: transparent;
+    top: 400px;
+}
+
+@media only screen and (max-device-width: 480px) {
+    #landing .jumbotron{
+        top: 300px;
+    }
 }
 
 #landing .jumbotron h1{
     font-family: 'Bebas Neue', sans-serif;
-    text-align: left;
-    margin-left: 5%;
+    text-align: center;
 }
 
 /* =========================
@@ -186,6 +215,18 @@ a:active:hover {
 #hero p a{
     color: black;
     margin-top: 10px;
+}
+
+#hero p{
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+@media only screen and (max-device-width: 480px) {
+    #hero p{
+        margin-left: 10%;
+        margin-right: 10%;
+    }
 }
 
 #hero p a{
@@ -321,7 +362,11 @@ ul.thumbs li a p {
 #networks {
     width: 100%;
     height: 100%;
-    padding-top: 200px;
+}
+
+#networks .container{
+    position: relative;
+    top: 400px;
 }
 
 #networks i {
@@ -330,9 +375,11 @@ ul.thumbs li a p {
     padding: 18px;
 }
 
-#networks .icon {
-    
+#networks i{
+    font-size: 40px;
+    padding: 12px
 }
+
 #networks .behance:hover {
     color: #1769ff;
 }
@@ -350,6 +397,6 @@ ul.thumbs li a p {
 }
 
 #networks .email:hover {
-    color: #f39c12;
+    color: #24CFAF;
 }
 
